# wifikit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  capture-to-crack.md  firmware.md  index.md  performance.md  troubleshooting.md  usage.md
src/wifikit/: __init__.py  __main__.py  bench.py  bootstrap.py  capture.py  cli.py  config.py  doctor.py  flash.py  marauder.py  session.py  tui.py
tests/: test_bench.py  test_bootstrap.py  test_capture.py  test_config.py  test_doctor.py  test_marauder.py
wordlists/: README.md  example-passwords.txt
