[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wifikit"
# Version is derived from the git tag (e.g. v0.1.0 -> 0.1.0) by hatch-vcs, so a
# release is cut purely by tagging — see .github/workflows/release.yml.
dynamic = ["version"]
description = "Terminal UI + CLI to drive an ESP32 running the Marauder firmware for authorized WiFi security testing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ravindra Singh", email = "ravindra@budgurjar.org" }]
keywords = [
    "esp32", "marauder", "wifi", "security", "pentest", "tui", "textual",
    "802.11", "deauth", "wardriving", "hardware",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "pyserial>=3.5",
    "prompt_toolkit>=3.0",
    "textual>=0.80",
    "esptool>=4.0",
]

[project.urls]
Homepage = "https://github.com/BadRat-in/wifikit"
Repository = "https://github.com/BadRat-in/wifikit"
Issues = "https://github.com/BadRat-in/wifikit/issues"

[project.scripts]
wifikit = "wifikit.cli:main"
wifikit-flash = "wifikit.flash:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.hatch.version]
# Read the version from the latest git tag (hatch-vcs / setuptools-scm style).
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/wifikit"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
